# QtIntroProjects

./: .gitignore  README.md
.github/workflows/: on_push.yaml
Anchors/: CMakeLists.txt  Main.qml  main.cpp
MorseConverter/: CMakeLists.txt  converter.cpp  converter.h  mainwindow.cpp  mainwindow.h  morsecodesound.cpp  morsecodesound.h  soundgenerator.cpp  soundgenerator.h
MouseEvent/: CMakeLists.txt  Main.qml  main.cpp
QMLTutorial/: CMakeLists.txt  Cell.qml  Main.qml  main.cpp
SiteCrawler/: CMakeLists.txt
TicTacToe/: CMakeLists.txt  box.cpp  box.h  computerbase.cpp  computerbase.h  dumcomputer.cpp  dumcomputer.h  easycomputer.cpp  easycomputer.h  gamelogic.cpp  gamelogic.h  gamemenu.cpp  gamemenu.h  gamestate.cpp  gamestate.h  invincicomputer.cpp  main.cpp  mainmenuwidget.cpp  mainmenuwidget.h  mainwindow.cpp  mainwindow.h  menu.cpp  menu.h  multiplayermenuwidget.cpp  multiplayermenuwidget.h  multiplayerregistration.cpp  multiplayerregistration.h  onelevelcomputer.cpp  onelevelcomputer.h  playerdatafilemanager.cpp  playerdatafilemanager.h  playermenubasewidget.cpp  playermenubasewidget.h  playernamefilemanager.cpp  playernamefilemanager.h  playerregistration.cpp  playerregistration.h  registration.cpp  registration.h  scoreboardwidget.h  (+12 more)
TicTacToe/Bots/: computerbase.h  easycomputer.cpp  easycomputer.h  invincicomputer.cpp  invincicomputer.h  onelevelcomputer.cpp  onelevelcomputer.h  twolayercomputer.cpp  twolayercomputer.h
TicTacToe/Functionality/: gamelogic.cpp  gamelogic.h  gamestate.cpp  gamestate.h  player.cpp  player.h
TicTacToe/Gui/: box.cpp  mainmenuwidget.cpp  mainwindow.h  multiplayermenuwidget.h  playermenubasewidget.h  scoreboardwidget.cpp  scoreboardwidget.h  singleplayermenuwidget.h
TicTacToe/Tests/: tst_gamestate.cpp  tst_gamestate.h  tst_main.cpp  tst_player.cpp  tst_player.h  tst_runner.h
TrafficLight/: CMakeLists.txt  Main.qml  main.cpp
WidgetTutorial/: CMakeLists.txt  main.cpp
